# BlackBox_theDevlogger

./: .env.example  .gitignore  DetailedReadme.md  INSTALL.md  MANIFEST.in  README.md  check_setup.py  config.py  devlog.py  install-hooks.ps1  install-hooks.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start_server.py
backend/: db.py  main.py  models.py
blackbox/: __init__.py  check.py  cli.py  server.py
blackbox/backend/: db.py  main.py
hooks/: post-checkout  post-commit  pre-commit
tests/: test_api.py
